--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div class="header">
-        
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png">
+                <span>wearme.</span>
+            </div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Fitness</a></li>
+                <li><a href="#">Connectivity</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>
+        </nav>
     </div>
     
 </body>
