--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
                 <li><a href="#">Support</a></li>
             </ul>
         </nav>
+
+        <div class="content">
+            <h1>The<br>Future</h1>
+            <p>This is the first smartwatch from our company. We make a huge collection of watches in all categories. </p>
+            <div class="links">
+                <a href="#">Learn More</a>
+                <a href="#">or Contact</a>
+            </div>
+        </div>
     </div>
     
 </body>
