--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </nav>
 
         <div class="content">
-            <h1>The<br>Future</h1>
-            <p>This is the first smartwatch from our company. We make a huge collection of watches in all categories. </p>
-            <div class="links">
+            <h1 class="slide-left">The<br>Future</h1>
+            <p class="slide-left">This is the first smartwatch from our company. We make a huge collection of watches in all categories. </p>
+            <div class="links slide-left">
                 <a href="#" class="btn">Learn More</a>
                 <a href="#">or Contact</a>
             </div>
